--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -24,7 +24,7 @@ const { headings } = Astro.props;
             <li class="my-2 text-ellipsis whitespace-nowrap overflow-hidden text-sm">
               <a
                 data-target="links"
-                class="data-[active]:text-primary-light"
+                class="data-active:text-primary-light"
                 href={`#${h.slug}`}
               >
                 {h.text}
