--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -66,10 +66,10 @@ import SquooshButton from "../SquooshButton.astro";
           </div>
           <div
             style="grid-area: whiteboard"
-            class="place-self-center sm:min-w-56 mr-[-30%] relative group-[[data-drawing]]:z-30 group-[[data-drawing]]:fixed sm:relative! group-[[data-drawing]]:mr-0 group-[[data-drawing]]:top-4 group-[[data-drawing]]:left-4 sm:top-0! sm:left-0! sm:mr-auto"
+            class="place-self-center sm:min-w-56 mr-[-30%] relative group-data-drawing:z-30 group-data-drawing:fixed sm:relative! group-data-drawing:mr-0 group-data-drawing:top-4 group-data-drawing:left-4 sm:top-0! sm:left-0! sm:mr-auto"
           >
             <Whiteboard {$scope} />
-            <div class="group-[[data-drawing]]:opacity-0 transition-opacity absolute bottom-[10%] sm:right-[50%] right-[90%] -z-10 w-full overflow-hidden">
+            <div class="group-data-drawing:opacity-0 transition-opacity absolute bottom-[10%] sm:right-[50%] right-[90%] -z-10 w-full overflow-hidden">
               <div class="absolute z-10 top-0 left-0 w-[50%] h-full bg-gradient-to-r from-gray-950 to-transparent" />
               <svg
                 width="491"
