replace twitch with bluesky

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -60,15 +60,15 @@ function isMatch(urlPath: string, linkPath: string) {
       <li
         class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
       >
-        <a href="https://github.com/bholmesdev"
-          ><Icon name="github" title="GitHub" size={24} /></a
+        <a href="https://bsky.app/profile/bholmes.dev"
+          ><Icon name="bluesky" title="Bluesky" size={30} /></a
         >
       </li>
       <li
         class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
       >
-        <a href="https://twitch.tv/bholmesdev"
-          ><Icon name="twitch" title="Twitch" size={24} /></a
+        <a href="https://github.com/bholmesdev"
+          ><Icon name="github" title="GitHub" size={24} /></a
         >
       </li>
     </ul>
