fix blog font sizing

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -74,7 +74,7 @@ const ogImage = new URL(typeof image === 'string' ? image : image.src, Astro.sit
         </footer>
         <style is:global>
             h1 {
-                font-family: var(--font-family-heading);
+                font-family: var(--font-heading);
             }
 
             button {
