--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -97,17 +97,17 @@ const { Content, headings } = await post.render();
     }
 
     main :global(article) :global(h3) {
-        font-size: var(--font-size-xl);
+        font-size: var(--text-xl);
         margin-block-start: 3rem;
     }
 
     main :global(article) :global(h4) {
-        font-size: var(--font-size-lg);
+        font-size: var(--text-lg);
         margin-block-start: 2.5rem;
     }
 
     main :global(article) :global(h2) {
-        font-size: var(--font-size-2xl);
+        font-size: var(--text-2xl);
         margin-block-start: 5rem;
         position: relative;
     }
@@ -126,8 +126,8 @@ const { Content, headings } = await post.render();
         z-index: -1;
         line-height: 1.3;
         color: var(--color-gray-600);
-        font-size: var(--font-size-2xl);
-        font-family: var(--font-family-heading);
+        font-size: var(--text-2xl);
+        font-family: var(--font-heading);
         justify-content: center;
     }
 
@@ -169,12 +169,13 @@ const { Content, headings } = await post.render();
         border-radius: 0.4rem;
         line-height: 1.7;
         margin-block: 1rem;
-        font-size: var(--font-size-sm);
+        font-size: var(--text-sm);
     }
 
     main :global(article) :global(code) {
         /* Prevent long URLs from overflowing */
         word-break: break-all;
+        font-size: var(--text-sm);
     }
 </style>
 
