update about to talk about warp

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,16 +29,22 @@ import SquooshButton from "~/components/SquooshButton.astro";
       </label>
       <div class="content-personal">
         <p>
-          Hey there! I’m Ben, a senior web developer from Charleston SC, USA.
-          You might know me from my <a
+          Hey there! I’m Ben, a product engineer from Charleston SC, USA. You
+          might know me as someone who uses and builds <a
+            href="https://warp.dev">Warp,</a
+          > a product that I genuinely think is the future of development. You might
+          also know me from my <a
             href="https://www.youtube.com/@bholmesdev/shorts"
             >short whiteboard videos</a
           > breaking down all sorts of topics (React Server Components, HTMX, and
-          SQLite to name a few). You also might know me as the inventor of <a
+          SQLite to name a few).
+        </p>
+        <p>
+          Heck, maybe you know me as the inventor of <a
             href="https://astro.build">Astro.</a
           >
-          <strong>I didn't invent Astro.</strong> But I'm a proud full time developer
-          driving it forward :)
+          <strong>I didn't invent Astro.</strong> But my time there definitely channeled
+          my love for design into a love for making development easier.
         </p>
         <p>
           I've been a web programmer since the pre-npm days. This taught me
@@ -48,11 +54,10 @@ import SquooshButton from "~/components/SquooshButton.astro";
         <p>
           I've since picked up every meta-framework you can think of, and even <a
             href="https://slinkity.dev">invented my own</a
-          > before joining Astro. As much as I love building web experiences, I've
-          realized I'm into tech for the tech itself. So, I've devoted myself to
-          helping
-          <em>you</em> build better websites. Through tools, through videos, through
-          puns, and a healthy <s>love</s> tolerance for JavaScript.
+          >. As much as I love building web experiences, I've realized I'm into
+          tech for the tech itself. So, I've devoted myself to helping
+          <em>you</em> build better software. Through tools, through videos, through
+          puns, and a love for Rust (...and JavaScript I guess).
         </p>
       </div>
       <div class="content-recruiter">
