--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -62,15 +62,16 @@ import SquooshButton from "~/components/SquooshButton.astro";
       </div>
       <div class="content-recruiter">
         <p>
-          I'm a full-time software developer at <a href="https://astro.build"
-            >the Astro Technology Company</a
+          I'm a full-time software developer at <a href="https://warp.dev"
+            >Warp</a
           >, so I'm not looking for employment.
         </p>
         <p>
           Still, here's all my skills / buzzwords you were going to search for: <strong
-            >NodeJS, ES6, ReactJS, NextJS, semantic HTML, understanding of a11y,
-            Angular 2+, SolidJS, SvelteJS, SCSS, MySQL, NoSQL, OOP programming,
-            C Basic, unit testing w/ Jest</strong
+            >Rust, TypeScript, NodeJS, ES6, ReactJS, NextJS, semantic HTML,
+            understanding of a11y, Angular 2+, SolidJS, SvelteJS, SCSS,
+            Postgres, MySQL, NoSQL, OOP programming, C Basic, unit testing w/
+            Jest, and more</strong
           >...
         </p>
         <p>
