--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,6 +39,7 @@ const ogImage = new URL(typeof image === 'string' ? image : image.src, Astro.sit
         <meta property="og:image" content={ogImage} />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
+        <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Ben Holmes" />
         <meta property="og:title" content={title} />
         <meta property="og:description" content={description} />
